src/domain/home/ArticlesAndAside/Articles/Articles.module.css
.articleWrapper {
  @apply relative pb-20;
  @apply md:pb-24;
}

.imageWrapper {
  @apply relative h-64 w-full rounded-md overflow-hidden bg-gray-200;
  @apply xs:h-72 md:h-80;
}

.articleTitle {
  @apply text-base text-left font-semibold tracking-normal leading-tight text-gray-900;
  @apply md:text-xl;
}

.articleDate {
  @apply text-xs text-left text-blue-700 tracking-wider;
  @apply mt-3;
}

.titleWrapper {
  @apply absolute bottom-0 left-2 right-2;
  @apply p-3 bg-white rounded-md shadow-md;
  @apply md:p-6 md:left-4 md:right-4;
}

.excerpt {
  @apply text-xs text-gray-700 line-clamp-3;
  @apply mt-4;
  @apply md:text-sm md:line-clamp-4;
}

